--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "build": "expo build:android"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/stack": "^6.2.0",
     "expo": "^52.0.46",
     "react": "^18.3.1",
     "react-native": "^0.76.9",
+    "react-native-root-toast": "^4.0.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.4.0",
     "typescript": "^5.3.3"
