--- a/app.json
+++ b/app.json
@@ -1,31 +1,40 @@
 {
-    "expo": {
-      "name": "MyApp",
-      "newArchEnabled":true,
-      "slug": "myapp",
-      "version": "1.0.0",
-      "orientation": "portrait",
-      "icon": "./src/assets/icon.png",
-      "splash": {
-        "image": "./src/assets/splash.png",
-        "resizeMode": "contain",
-        "backgroundColor": "#ffffff"
+  "expo": {
+    "name": "MyApp",
+    "newArchEnabled": true,
+    "slug": "myapp",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./src/assets/icon.png",
+    "splash": {
+      "image": "./src/assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./src/assets/adaptive-icon.png",
+        "backgroundColor": "#FFFFFF"
       },
-      "updates": {
-        "fallbackToCacheTimeout": 0
-      },
-      "assetBundlePatterns": ["**/*"],
-      "ios": {
-        "supportsTablet": true
-      },
-      "android": {
-        "adaptiveIcon": {
-          "foregroundImage": "./src/assets/adaptive-icon.png",
-          "backgroundColor": "#FFFFFF"
-        }
-      },
-      "web": {
-        "favicon": "./src/assets/favicon.png"
+      "package": "com.rampmail29.myapp"
+    },
+    "web": {
+      "favicon": "./src/assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "7df855c7-fd9e-480e-a0a2-9bcee35092d1"
       }
-    }
+    },
+    "owner": "rampmail29"
   }
+}
