--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-native-root-toast": "^4.0.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.4.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
