--- a/eas.json
+++ b/eas.json
@@ -1,14 +1,21 @@
 {
   "build": {
-    "develompent": {
-      "developmentClient":true,
-      "distribution": "internal"
-    },
     "preview": {
       "android": {
         "buildType": "apk"
       }
     },
-    "production":{}
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
+    "preview4": {
+      "distribution": "internal"
+    },
+    "production": {}
   }
 }
