--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typescript": "^5.3.3",
     "react-dom": "18.3.1",
     "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1"
+    "@expo/metro-runtime": "~4.0.1",
+    "expo-dev-client": "~5.0.20"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
